fix: chackbox accessibility [MDS-599]

--- a/workspaces/themes/src/moon.css
+++ b/workspaces/themes/src/moon.css
@@ -7,7 +7,7 @@
   --goten: 255 255 255; /* #ffffff */
   --goku: 245 245 245; /* #f5f5f5 */
   --bulma: 0 0 0; /* #000000 */
-  --trunks: 153 156 160; /* #999ca0 */
+  --trunks: 89 93 98; /* #595D62 */
   --popo: 0 0 0; /* #000000 */
   --jiren: 78 70 180 / 0.12; /* #4e46b4 */
   --heles: 0 0 0 / 0.04; /* #000000 */
