--- a/workspaces/themes/src/moon.css
+++ b/workspaces/themes/src/moon.css
@@ -2,7 +2,7 @@
 .theme-moon-light {
   --piccolo: 78 70 180; /* #4e46b4 */
   --hit: 64 166 159; /* #40a69f */
-  --beerus: 235 235 235; /* #ebebeb */
+  --beerus: 226 226 226; /* #e2e2e2 */
   --gohan: 255 255 255; /* #ffffff */
   --goten: 255 255 255; /* #ffffff */
   --goku: 245 245 245; /* #f5f5f5 */
