--- a/next-docs/styles/globals.css
+++ b/next-docs/styles/globals.css
@@ -18,8 +18,8 @@
   font-display: swap;
   font-weight: 500;
   unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD';
-  src: local('DMSans-Medium'), local('DM Sans Medium'),
-    url('/fonts/DMSans-Medium.woff2') format('woff2');
+  src: local('DMSans-Semibold'), local('DM Sans Semibold'),
+    url('/fonts/DMSans-Semibold.woff2') format('woff2');
 }
 
 html,
