--- a/docs/app/globals.css
+++ b/docs/app/globals.css
@@ -72,7 +72,7 @@
 
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 
   /* box-shadow */
   --shadow-xs: 0 4px 12px -6px rgb(0 0 0 / 0.06);
