--- a/next-docs/public/templates/styles/bc-template.css
+++ b/next-docs/public/templates/styles/bc-template.css
@@ -2397,7 +2397,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-sb-dark,
@@ -2528,7 +2528,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-bitcasino-dark,
@@ -2644,7 +2644,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-betadda-dark,
@@ -2769,7 +2769,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-livecasino-dark,
