--- a/workspaces/themes/src/bitcasino.css
+++ b/workspaces/themes/src/bitcasino.css
@@ -68,7 +68,7 @@
 
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 
   /* box-shadow */
   --shadow-xs: 0 4px 12px -6px rgb(0 0 0 / 0.06);
@@ -149,7 +149,7 @@
 
   /* fonts */
   --averta: 'Averta Std';
-  --sans: 'DM Sans';
+  --dm-sans: 'DM Sans';
 
   /* box-shadow */
   --shadow-xs: 0 4px 12px -6px rgb(0 0 0 / 0.64);
