feat: add DM Sans font, make it default [MDS-639] (#2334)
* feat: add DM Sans font, make it default [MDS-639]

* feat: add DM Sans font, make it default [MDS-639]

* feat: add DM Sans font, make it default [MDS-639]

* fix: moon-opacity in docs css

--- a/next-docs/public/templates/styles/sb-template.css
+++ b/next-docs/public/templates/styles/sb-template.css
@@ -2397,6 +2397,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-sb-dark,
@@ -2527,6 +2528,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-betadda-dark,
