--- a/docs/app/globals.css
+++ b/docs/app/globals.css
@@ -68,10 +68,11 @@
   --border-i-width: 0.125rem; /* 2px */
 
   /* opacity */
-  --opacity-moon: 0.32;
+  --opacity-moon: 0.6;
 
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 
   /* box-shadow */
   --shadow-xs: 0 4px 12px -6px rgb(0 0 0 / 0.06);
