--- a/next-docs/public/templates/styles/bc-template.css
+++ b/next-docs/public/templates/styles/bc-template.css
@@ -2397,6 +2397,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-sb-dark,
@@ -2527,6 +2528,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-bitcasino-dark,
@@ -2642,6 +2644,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-betadda-dark,
@@ -2766,6 +2769,7 @@ video {
   --opacity-moon: 0.6;
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-livecasino-dark,
