--- a/next-docs/styles/sb-template-input.css
+++ b/next-docs/styles/sb-template-input.css
@@ -70,6 +70,7 @@
 
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-sb-dark,
@@ -157,6 +158,7 @@
 
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 }
 
 :root.theme-betadda-dark,
