--- a/workspaces/themes/src/partners.css
+++ b/workspaces/themes/src/partners.css
@@ -68,6 +68,7 @@
 
   /* fonts */
   --averta: 'Averta Std';
+  --dm-sans: 'DM Sans';
 
   /* box-shadow */
   --shadow-xs: 0 4px 12px -6px rgb(0 0 0 / 0.06);
