Update hit color on sb light theme
https://www.figma.com/file/FuPXIU6dVQXIm7zas5ZBnG/Sportsbet---Theme?type=design&node-id=1016-325&mode=design&t=RmC0gwY7yt0u1ZbL-0

--- a/workspaces/themes/src/sportsbet.css
+++ b/workspaces/themes/src/sportsbet.css
@@ -1,7 +1,7 @@
 :root.theme-sb-light,
 .theme-sb-light {
   --piccolo: 73 179 86; /* #49b356 */
-  --hit: 247 247 247; /* #f7f7f7 */
+  --hit: 234 235 235; /* #eaebeb */
   --beerus: 224 227 229; /* #e0e3e5 */
   --goku: 255 255 255; /* #ffffff */
   --gohan: 244 245 246; /* #f4f5f6 */
