feat: add pay.io theme [MDS-670]

--- a/next-docs/styles/themes.css
+++ b/next-docs/styles/themes.css
@@ -12,3 +12,4 @@
 @import '@heathmont/moon-themes-tw/src/tradeart.css';
 @import '@heathmont/moon-themes-tw/src/tradeartMiniBetting.css';
 @import '@heathmont/moon-themes-tw/src/travel.css';
+@import '@heathmont/moon-themes-tw/src/pay.css';
