--- a/workspaces/themes/src/bitcasinoNew.css
+++ b/workspaces/themes/src/bitcasinoNew.css
@@ -3,7 +3,7 @@
   --piccolo: 214 55 65; /* #D63741 */
   --hit: 255 255 255; /* #FFFFFF */
   --beerus: 224 224 224; /* #E0E0E0 */
-  --gohan: 242, 242, 242; /* #F2F2F2 */
+  --gohan: 242 242 242; /* #F2F2F2 */
   --goten: 255 255 255; /* #FFFFFF */
   --goku: 255 255 255; /* #FFFFFF */
   --bulma: 27 20 20; /* #1B1414 */
