feat: flip goku and gohan. Fix Accordion, Popover, Tabs, Search, SearchCmdk [MDS-688]

--- a/workspaces/themes/src/bitcasino.css
+++ b/workspaces/themes/src/bitcasino.css
@@ -3,9 +3,9 @@
   --piccolo: 255 79 15; /* #ff4f0f */
   --hit: 227 234 237; /* #e3eaed */
   --beerus: 219 224 227; /* #dbe0e3 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 243 245 246; /* #f3f5f6 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 243 245 246; /* #f3f5f6 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 15 22 31; /* #0f161f */
   --trunks: 134 151 162; /* #8697a2 */
   --popo: 0 0 0; /* #000000 */
