--- a/workspaces/themes/src/comms.css
+++ b/workspaces/themes/src/comms.css
@@ -3,9 +3,9 @@
   --piccolo: 0 0 0; /* #000000 */
   --hit: 92 51 207; /* #5c33cf */
   --beerus: 235 235 235; /* #ebebeb */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 241 243 243; /* #f1f3f3 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 241 243 243; /* #f1f3f3 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 0 0 0; /* #000000 */
   --trunks: 112 112 112; /* #707070 */
   --popo: 0 0 0; /* #000000 */
