--- a/workspaces/themes/src/empire.css
+++ b/workspaces/themes/src/empire.css
@@ -3,9 +3,9 @@
   --piccolo: 255 37 168; /* #ff25a8 */
   --hit: 184 166 255; /* #b8a6ff */
   --beerus: 229 228 234; /* #e5e4ea */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 240 238 245; /* #f0eef5 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 240 238 245; /* #f0eef5 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 21 6 79; /* #15064f */
   --trunks: 92 86 113; /* #5c5671 */
   --popo: 0 0 0; /* #000000 */
