--- a/workspaces/themes/src/hub88.css
+++ b/workspaces/themes/src/hub88.css
@@ -3,9 +3,9 @@
   --piccolo: 26 91 255; /* #1a5bff */
   --hit: 171 183 191; /* #abb7bf */
   --beerus: 226 230 233; /* #e2e6e9 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 243 245 246; /* #f3f5f6 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 243 245 246; /* #f3f5f6 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 1 9 19; /* #010913 */
   --trunks: 134 151 162; /* #8697a2 */
   --popo: 0 0 0; /* #000000 */
