--- a/workspaces/themes/src/lab.css
+++ b/workspaces/themes/src/lab.css
@@ -3,9 +3,9 @@
   --piccolo: 32 36 38; /* #202426 */
   --hit: 255 92 111; /* #ff5c6f */
   --beerus: 220 225 229; /* #dce1e5 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 243 245 246; /* #f3f5f6 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 243 245 246; /* #f3f5f6 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 32 36 38; /* #202426 */
   --trunks: 134 151 162; /* #8697a2 */
   --popo: 32 36 38; /* #202426 */
