--- a/workspaces/themes/src/livecasino.css
+++ b/workspaces/themes/src/livecasino.css
@@ -3,9 +3,9 @@
   --piccolo: 222 13 62; /* #de0d3e */
   --hit: 169 170 177; /* #a9aab1 */
   --beerus: 229 233 240; /* #e5e9f0 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 240 246 255; /* #f0f6ff */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 240 246 255; /* #f0f6ff */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 15 22 31; /* #0f161f */
   --trunks: 134 151 162; /* #8697a2 */
   --popo: 0 0 0; /* #000000 */
