--- a/workspaces/themes/src/moon.css
+++ b/workspaces/themes/src/moon.css
@@ -3,9 +3,9 @@
   --piccolo: 78 70 180; /* #4e46b4 */
   --hit: 64 166 159; /* #40a69f */
   --beerus: 226 226 226; /* #e2e2e2 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 245 245 245; /* #f5f5f5 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 245 245 245; /* #f5f5f5 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 0 0 0; /* #000000 */
   --trunks: 89 93 98; /* #595D62 */
   --popo: 0 0 0; /* #000000 */
