--- a/workspaces/themes/src/partners.css
+++ b/workspaces/themes/src/partners.css
@@ -3,9 +3,9 @@
   --piccolo: 0 0 0; /* #000000 */
   --hit: 70 99 163; /* #4663a3 */
   --beerus: 224 224 225; /* #e0e0e1 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 245 245 245; /* #f5f5f6 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 245 245 245; /* #f5f5f6 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 34 34 37; /* #222225 */
   --trunks: 119 119 126; /* #77777e */
   --popo: 34 34 37; /* #222225 */
