--- a/workspaces/themes/src/tradeart.css
+++ b/workspaces/themes/src/tradeart.css
@@ -3,11 +3,11 @@
   --piccolo: 0 0 0; /* #000000 */
   --hit: 194 199 205; /* #c2c7cd */
   --beerus: 235 235 235; /* #ebebeb */
-  --goku: 247 247 247; /* #f7f7f7 */
-  --gohan: 255 255 255; /* #ffffff; */
+  --gohan: 247 247 247; /* #f7f7f7 */
+  --goten: 255 255 255; /* #ffffff */
+  --goku: 255 255 255; /* #ffffff; */
   --bulma: 0 0 0; /* #000000 */
   --trunks: 112 112 112; /* #707070 */
-  --goten: 255 255 255; /* #ffffff */
   --popo: 0 0 0; /* #000000 */
   --jiren: 0 0 0 / 0.06; /* #000000 */
   --heles: 0 0 0 / 0.08; /* #000000 */
