--- a/workspaces/themes/src/travel.css
+++ b/workspaces/themes/src/travel.css
@@ -3,9 +3,9 @@
   --piccolo: 39 90 219; /* #275adb */
   --hit: 252 233 176; /* #fce9b0 */
   --beerus: 224 224 224; /* #e0e0e0 */
-  --gohan: 255 255 255; /* #ffffff */
+  --gohan: 246 245 244; /* #f6f5f4 */
   --goten: 255 255 255; /* #ffffff */
-  --goku: 246 245 244; /* #f6f5f4 */
+  --goku: 255 255 255; /* #ffffff */
   --bulma: 24 27 28; /* #181b1c */
   --trunks: 120 120 125; /* #78787d */
   --popo: 0 0 0; /* #000000 */
