--- a/docs/app/globals.css
+++ b/docs/app/globals.css
@@ -2,83 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-/* TODO just import theme (seems like import doesn't work_ */
-:root {
-  --piccolo: 78 70 180; /* #4e46b4 */
-  --hit: 64 166 159; /* #40a69f */
-  --beerus: 235 235 235; /* #ebebeb */
-  --gohan: 255 255 255; /* #ffffff */
-  --goten: 255 255 255; /* #ffffff */
-  --goku: 245 245 245; /* #f5f5f5 */
-  --bulma: 0 0 0; /* #000000 */
-  --trunks: 153 156 160; /* #999ca0 */
-  --popo: 0 0 0; /* #000000 */
-  --jiren: 78 70 180 / 0.12; /* #4e46b4 */
-  --heles: 0 0 0 / 0.04; /* #000000 */
-  --zeno: 0 0 0 / 0.56; /* #000000 */
+@import '../node_modules/@heathmont/moon-themes-tw/lib/moon.css';
 
-  /* support-colors  */
-  --krillin: 255 179 25; /* #ff9800 */
-  --krillin-60: 255 179 25 / 0.56; /* #ff9800 */
-  --krillin-10: 255 179 25 / 0.08; /* #ff9800 */
+@font-face {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD';
+  src: local('DMSans-Regular'), local('DM Sans Regular'),
+    url('./components/shared/fonts/DMSans-Regular.woff2') format('woff2');
+}
 
-  --chichi: 255 78 100; /* #ff4e64 */
-  --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
-  --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
+@font-face {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD';
+  src: local('DMSans-Semibold'), local('DM Sans Semibold'),
+    url('./components/shared/fonts/DMSans-Semibold.woff2') format('woff2');
+}
 
-  --roshi: 46 125 50; /* #2e7d32 */
-  --roshi-60: 46 125 50 / 0.56; /* #2e7d32 */
-  --roshi-10: 46 125 50 / 0.08; /* #2e7d32 */
-
-  --dodoria: 211 48 48; /* #d33030 */
-  --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
-  --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
-
-  --cell: 149 241 213; /* #95f1d5 */
-  --cell-60: 149 241 213 / 0.56; /* #95f1d5 */
-  --cell-10: 149 241 213 / 0.08; /* #95f1d5 */
-
-  --raditz: 179 128 74; /* #b3804a */
-  --raditz-60: 179 128 74 / 0.56; /* #b3804a */
-  --raditz-10: 179 128 74 / 0.08; /* #b3804a */
-
-  --whis: 52 72 240; /* #3448f0 */
-  --whis-60: 52 72 240 / 0.56; /* #3448f0 */
-  --whis-10: 52 72 240 / 0.08; /* #3448f0 */
-
-  --frieza: 92 51 207; /* #5c33cf */
-  --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
-  --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
-
-  --nappa: 114 85 80; /* #725550 */
-  --nappa-60: 114 85 80 / 0.56; /* #725550 */
-  --nappa-10: 114 85 80 / 0.08; /* #725550 */
-
-  /* border-radius */
-  --radius-i-xs: 0.25rem; /* 4px */
-  --radius-i-sm: 0.5rem; /* 8px */
-  --radius-i-md: 0.75rem; /* 12px */
-  --radius-s-xs: 0.25rem; /* 4px */
-  --radius-s-sm: 0.5rem; /* 8px */
-  --radius-s-md: 0.75rem; /* 12px */
-  --radius-s-lg: 1rem; /* 16px */
-
-  /* border-width */
-  --border-width: 0.0625rem; /* 1px */
-  --border-i-width: 0.125rem; /* 2px */
-
-  /* opacity */
-  --opacity-moon: 0.6;
-
-  /* fonts */
-  --averta: 'Averta Std';
-  --dm-sans: 'DM Sans';
-
-  /* box-shadow */
-  --shadow-xs: 0 4px 12px -6px rgb(0 0 0 / 0.06);
-  --shadow-sm: 0 6px 6px -6px rgb(0 0 0 / 0.16), 0 0 1px rgb(0 0 0 / 0.4);
-  --shadow-md: 0 12px 12px -6px rgb(0 0 0 / 0.16), 0 0 1px rgb(0 0 0 / 0.4);
-  --shadow-lg: 0 8px 24px -6px rgb(0 0 0 / 0.16), 0 0 1px rgb(0 0 0 / 0.4);
-  --shadow-xl: 0 32px 32px -8px rgb(0 0 0 / 0.08),
-    0 0 32px -8px rgb(0 0 0 / 0.12), 0 0 1px rgb(0 0 0 / 0.2);
+html,
+body {
+  font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-size-adjust: none; /* Prevent automatic zooming of fonts on some mobile devices. */
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased; /* Consistent font display behavior on OSX. */
+  -moz-osx-font-smoothing: grayscale; /* Consistent font display behavior on OSX. */
 }
