fix: update support colours [MDS-815]

--- a/workspaces/themes/src/moon.css
+++ b/workspaces/themes/src/moon.css
@@ -90,8 +90,8 @@
   --bulma: 255 255 255; /* #ffffff */
   --trunks: 148 152 158; /* #94989e */
   --popo: 0 0 0; /* #000000 */
-  --jiren: 255 255 255 / 0.12; /* #ffffff */
-  --heles: 255 255 255 / 0.4; /* #ffffff */
+  --jiren: 92 51 207 / 0.12; /* #5c33cf */
+  --heles: 255 255 255 / 0.04; /* #ffffff */
   --zeno: 0 0 0 / 0.56; /* #000000 */
 
   /* support-colors  */
