--- a/workspaces/themes/src/bitcasinoNew.css
+++ b/workspaces/themes/src/bitcasinoNew.css
@@ -15,40 +15,40 @@
 
   /* support-colors  */
   --krillin: 255 179 25; /* #ffb319 */
-  --krillin-60: 255 203 99; /* #FFCB63 */
-  --krillin-10: 255 228 173; /* #FFE4AD */
+  --krillin-60: 255 179 25 / 0.56; /* #ffb319 */
+  --krillin-10: 255 179 25 / 0.08; /* #ffb319 */
 
   --chichi: 255 78 100; /* #ff4e64 */
-  --chichi-60: 255 114 131; /* #FF7283 */
-  --chichi-10: 255 167 178; /* #FFA7B2 */
+  --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
+  --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
 
   --roshi: 12 214 100; /* #0CD664 */
-  --roshi-60: 95 245 118; /* #5FF576 */
-  --roshi-10: 182 243 208; /* #B6F3D0 */
+  --roshi-60: 12 214 100 / 0.56; /* #0CD664 */
+  --roshi-10: 12 214 100 / 0.08; /* #0CD664 */
 
   --dodoria: 211 48 48; /* #d33030 */
-  --dodoria-60: 241 89 89; /* #F15959 */
-  --dodoria-10: 233 151 151; /* #E99797 */
+  --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
+  --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
 
   --cell: 10 183 88; /* #0AB758 */
-  --cell-60: 43 207 117; /* #2BCF75 */
-  --cell-10: 132 219 171; /* #84DBAB */
+  --cell-60: 10 183 88 / 0.56; /* #0AB758 */
+  --cell-10: 10 183 88 / 0.08; /* #0AB758 */
 
   --raditz: 179 128 74; /* #b3804a */
-  --raditz-60: 215 157 97; /* #D79D61 */
-  --raditz-10: 217 191 164; /* #D9BFA4 */
+  --raditz-60: 179 128 74 / 0.56; /* #b3804a */
+  --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
   --whis: 46 105 255; /* #2E69FF */
-  --whis-60: 46 105 255 / 0.56; /* #2E69FF8F */
-  --whis-10: 46 105 255 / 0.1; /* #2E69FF1A */
+  --whis-60: 46 105 255 / 0.56; /* #2E69FF */
+  --whis-10: 46 105 255 / 0.08; /* #2E69FF */
 
   --frieza: 92 51 207; /* #5c33cf */
-  --frieza-60: 124 82 240; /* #7C52F0 */
-  --frieza-10: 182 163 233; /* #B6A3E9 */
+  --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
+  --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
 
   --nappa: 114 85 80; /* #725550 */
-  --nappa-60: 146 116 110; /* #92746E */
-  --nappa-10: 184 170 167; /* #B8AAA7 */
+  --nappa-60: 114 85 80 / 0.56; /* #725550 */
+  --nappa-10: 114 85 80 / 0.08; /* #725550 */
 
   /* border-radius */
   --radius-i-xs: 0.25rem; /* 4px */
@@ -97,40 +97,40 @@
 
   /* support-colors  */
   --krillin: 255 179 25; /* #ffb319 */
-  --krillin-60: 255 203 99; /* #FFCB63 */
-  --krillin-10: 255 228 173; /* #FFE4AD */
+  --krillin-60: 255 179 25 / 0.56; /* #ffb319 */
+  --krillin-10: 255 179 25 / 0.08; /* #ffb319 */
 
   --chichi: 255 78 100; /* #ff4e64 */
-  --chichi-60: 255 114 131; /* #FF7283 */
-  --chichi-10: 255 167 178; /* #FFA7B2 */
+  --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
+  --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
 
   --roshi: 12 214 100; /* #0CD664 */
-  --roshi-60: 95 245 118; /* #5FF576 */
-  --roshi-10: 182 243 208; /* #B6F3D0 */
+  --roshi-60: 12 214 100 / 0.56; /* #0CD664 */
+  --roshi-10: 12 214 100 / 0.08; /* #0CD664 */
 
   --dodoria: 211 48 48; /* #d33030 */
-  --dodoria-60: 241 89 89; /* #F15959 */
-  --dodoria-10: 233 151 151; /* #E99797 */
+  --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
+  --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
 
   --cell: 10 183 88; /* #0AB758 */
-  --cell-60: 43 207 117; /* #2BCF75 */
-  --cell-10: 132 219 171; /* #84DBAB */
+  --cell-60: 10 183 88 / 0.56; /* #0AB758 */
+  --cell-10: 10 183 88 / 0.08; /* #0AB758 */
 
   --raditz: 179 128 74; /* #b3804a */
-  --raditz-60: 215 157 97; /* #D79D61 */
-  --raditz-10: 217 191 164; /* #D9BFA4 */
+  --raditz-60: 179 128 74 / 0.56; /* #b3804a */
+  --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
   --whis: 46 105 255; /* #2E69FF */
-  --whis-60: 46 105 255 / 0.56; /* #2E69FF8F */
-  --whis-10: 46 105 255 / 0.1; /* #2E69FF1A */
+  --whis-60: 46 105 255 / 0.56; /* #2E69FF */
+  --whis-10: 46 105 255 / 0.08; /* #2E69FF */
 
   --frieza: 92 51 207; /* #5c33cf */
-  --frieza-60: 124 82 240; /* #7C52F0 */
-  --frieza-10: 182 163 233; /* #B6A3E9 */
+  --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
+  --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
 
   --nappa: 114 85 80; /* #725550 */
-  --nappa-60: 146 116 110; /* #92746E */
-  --nappa-10: 184 170 167; /* #B8AAA7 */
+  --nappa-60: 114 85 80 / 0.56; /* #725550 */
+  --nappa-10: 114 85 80 / 0.08; /* #725550 */
 
   /* border-radius */
   --radius-i-xs: 0.25rem; /* 4px */
