--- a/workspaces/themes/src/lab.css
+++ b/workspaces/themes/src/lab.css
@@ -15,40 +15,40 @@
 
   /* support-colors  */
   --krillin: 255 179 25; /* #ffb319 */
-  --krillin-60: 255 198 82; /* #ffc652 */
-  --krillin-10: 255 217 141; /* #ffd98d */
+  --krillin-60: 255 179 25  / 0.56; /* #ffb319 */
+  --krillin-10: 255 179 25 / 0.08; /* #ffb319 */
 
   --chichi: 255 78 100; /* #ff4e64 */
-  --chichi-60: 255 118 135; /* #ff7687 */
-  --chichi-10: 255 150 163; /* #ff96a3 */
+  --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
+  --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
 
   --roshi: 74 209 95; /* #4ad15f */
-  --roshi-60: 100 220 119; /* #64dc77 */
-  --roshi-10: 127 242 145; /* #7ff291 */
+  --roshi-60: 74 209 95 / 0.56; /* #4ad15f */
+  --roshi-10: 74 209 95 / 0.08; /* #4ad15f */
 
   --dodoria: 211 48 48; /* #d33030 */
-  --dodoria-60: 219 78 78; /* #db4e4e */
-  --dodoria-10: 240 103 103; /* #f06767 */
+  --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
+  --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
 
   --cell: 149 241 213; /* #95f1d5 */
-  --cell-60: 162 250 223; /* #a2fadf */
-  --cell-10: 191 255 236; /* #bfffec */
+  --cell-60: 149 241 213 / 0.56; /* #95f1d5 */
+  --cell-10: 149 241 213 / 0.08; /* #95f1d5 */
 
   --raditz: 179 128 74; /* #b3804a */
-  --raditz-60: 193 145 93; /* #c1915d */
-  --raditz-10: 214 169 121; /* #d6a979 */
+  --raditz-60: 179 128 74 / 0.56; /* #b3804a */
+  --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
   --whis: 52 72 240; /* #3448f0 */
-  --whis-60: 103 119 248; /* #6777f8 */
-  --whis-10: 132 144 249; /* #8490f9 */
+  --whis-60: 52 72 240 / 0.56; /* #3448f0 */
+  --whis-10: 52 72 240 / 0.08; /* #3448f0 */
 
   --frieza: 92 51 207; /* #5c33cf */
-  --frieza-60: 115 77 222; /* #734dde */
-  --frieza-10: 146 113 239; /* #9271ef */
+  --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
+  --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
 
   --nappa: 114 85 80; /* #725550 */
-  --nappa-60: 133 106 102; /* #856a66 */
-  --nappa-10: 161 134 129; /* #a18681 */
+  --nappa-60: 114 85 80 / 0.56; /* #725550 */
+  --nappa-10: 114 85 80 / 0.08; /* #725550 */
 
   /* border-radius */
   --radius-i-xs: 0.25rem; /* 4px */
