--- a/workspaces/themes/src/sportsbet.css
+++ b/workspaces/themes/src/sportsbet.css
@@ -15,40 +15,40 @@
 
   /* support-colors  */
   --krillin: 248 193 0; /* #f8c100 */
-  --krillin-60: 248 213 92; /* #f8d55c */
-  --krillin-10: 254 246 221; /* #fef6dd */
+  --krillin-60: 248 193 0 / 0.56; /* #f8c100 */
+  --krillin-10: 248 193 0 / 0.08; /* #f8c100 */
 
   --chichi: 255 78 100; /* #ff4e64 */
-  --chichi-60: 255 154 167; /* #ff9aa7 */
-  --chichi-10: 255 240 242; /* #fff0f2 */
+  --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
+  --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
 
   --roshi: 255 138 1; /* #ff8a01 */
-  --roshi-60: 255 167 64; /* #ffa740 */
-  --roshi-10: 255 242 227; /* #fff2e3 */
+  --roshi-60: 255 138 1 / 0.56; /* #ff8a01 */
+  --roshi-10: 255 138 1 / 0.08; /* #ff8a01 */
 
   --dodoria: 190 88 66; /* #be5842 */
-  --dodoria-60: 206 130 113; /* #ce8271 */
-  --dodoria-10: 242 222 217; /* #f2Ded9 */
+  --dodoria-60: 190 88 66 / 0.56; /* #be5842 */
+  --dodoria-10: 190 88 66 / 0.08; /* #be5842 */
 
   --cell: 27 210 154; /* #1bd29a */
-  --cell-60: 45 230 173; /* #2de6ad */
-  --cell-10: 237 252 247; /* #edfcf7 */
+  --cell-60: 27 210 154 / 0.56; /* #1bd29a */
+  --cell-10: 27 210 154 / 0.08; /* #1bd29a */
 
   --raditz: 179 128 74; /* #b3804a */
-  --raditz-60: 193 145 93; /* #c1915d */
-  --raditz-10: 240 230 219; /* #f0e6db */
+  --raditz-60: 179 128 74 / 0.56; /* #b3804a */
+  --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
   --whis: 46 105 255; /* #2e69ff */
-  --whis-60: 77 127 255; /* #4d7fff */
-  --whis-10: 46 105 255 / 0.1; /* #2E69FF1A */
+  --whis-60: 46 105 255 / 0.56; /* #2e69ff */
+  --whis-10: 46 105 255 / 0.08; /* #2e69ff */
 
   --frieza: 111 59 255; /* #6f3bff */
-  --frieza-60: 133 88 255; /* #8558ff */
-  --frieza-10: 244 240 255; /* #f4f0ff */
+  --frieza-60: 111 59 255 / 0.56; /* #6f3bff */
+  --frieza-10: 111 59 255 / 0.08; /* #6f3bff */
 
   --nappa: 0 142 173; /* #008ead */
-  --nappa-60: 64 170 194; /* #40aac2 */
-  --nappa-10: 234 246 249; /* #eaf6f9 */
+  --nappa-60: 0 142 173 / 0.56; /* #008ead */
+  --nappa-10: 0 142 173 / 0.08; /* #008ead */
 
   /* border-radius */
   --radius-i-xs: 0.25rem; /* 4px */
@@ -96,40 +96,40 @@
 
   /* support-colors  */
   --krillin: 248 193 0; /* #f8c100 */
-  --krillin-60: 248 213 92; /* #f8d55c */
-  --krillin-10: 254 246 221; /* #fef6dd */
+  --krillin-60: 248 193 0 / 0.56; /* #f8c100 */
+  --krillin-10: 248 193 0 / 0.08; /* #f8c100 */
 
   --chichi: 255 78 100; /* #ff4e64 */
-  --chichi-60: 255 154 167; /* #ff9aa7 */
-  --chichi-10: 255 240 242; /* #fff0f2 */
+  --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
+  --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
 
   --roshi: 255 138 1; /* #ff8a01 */
-  --roshi-60: 255 167 64; /* #ffa740 */
-  --roshi-10: 255 242 227; /* #fff2e3 */
+  --roshi-60: 255 138 1 / 0.56; /* #ff8a01 */
+  --roshi-10: 255 138 1 / 0.08; /* #ff8a01 */
 
   --dodoria: 190 88 66; /* #be5842 */
-  --dodoria-60: 206 130 113; /* #ce8271 */
-  --dodoria-10: 242 222 217; /* #f2Ded9 */
+  --dodoria-60: 190 88 66 / 0.56; /* #be5842 */
+  --dodoria-10: 190 88 66 / 0.08; /* #be5842 */
 
   --cell: 27 210 154; /* #1bd29a */
-  --cell-60: 45 230 173; /* #2de6ad */
-  --cell-10: 237 252 247; /* #edfcf7 */
+  --cell-60: 27 210 154 / 0.56; /* #1bd29a */
+  --cell-10: 27 210 154 / 0.08; /* #1bd29a */
 
   --raditz: 179 128 74; /* #b3804a */
-  --raditz-60: 193 145 93; /* #c1915d */
-  --raditz-10: 240 230 219; /* #f0e6db */
+  --raditz-60: 179 128 74 / 0.56; /* #b3804a */
+  --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
   --whis: 46 105 255; /* #2e69ff */
-  --whis-60: 77 127 255; /* #4d7fff */
-  --whis-10: 46 105 255 / 0.1; /* #2E69FF1A */
+  --whis-60: 46 105 255 / 0.56; /* #2e69ff */
+  --whis-10: 46 105 255 / 0.08; /* #2e69ff */
 
   --frieza: 111 59 255; /* #6f3bff */
-  --frieza-60: 133 88 255; /* #8558ff */
-  --frieza-10: 244 240 255; /* #f4f0ff */
+  --frieza-60: 111 59 255 / 0.56; /* #6f3bff */
+  --frieza-10: 111 59 255 / 0.08; /* #6f3bff */
 
   --nappa: 0 142 173; /* #008ead */
-  --nappa-60: 64 170 194; /* #40aac2 */
-  --nappa-10: 234 246 249; /* #eaf6f9 */
+  --nappa-60: 0 142 173 / 0.56; /* #008ead */
+  --nappa-10: 0 142 173 / 0.08; /* #008ead */
 
   /* border-radius */
   --radius-i-xs: 0.25rem; /* 4px */
