fix: SBFE-752 remove commas from rgb values

--- a/workspaces/themes/src/sportsbet.css
+++ b/workspaces/themes/src/sportsbet.css
@@ -22,13 +22,13 @@
   --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
   --chichi-10: 255 78 100 / 0.12; /* #ff4e64 */
 
-  --roshi: 12, 214, 100; /* #0CD664 */
-  --roshi-60: 12, 214, 100 / 0.56; /* #0CD664 */
-  --roshi-10: 12, 214, 100 / 0.12; /* #0CD664 */
+  --roshi: 12 214 100; /* #0CD664 */
+  --roshi-60: 12 214 100 / 0.56; /* #0CD664 */
+  --roshi-10: 12 214 100 / 0.12; /* #0CD664 */
 
-  --dodoria: 255, 138, 1; /* #FF8A01 */
-  --dodoria-60: 255, 138, 1 / 0.56; /* #FF8A01 */
-  --dodoria-10: 255, 138, 1 / 0.12; /* #FF8A01 */
+  --dodoria: 255 138 1; /* #FF8A01 */
+  --dodoria-60: 255 138 1 / 0.56; /* #FF8A01 */
+  --dodoria-10: 255 138 1 / 0.12; /* #FF8A01 */
 
   --cell: 27 210 154; /* #1bd29a */
   --cell-60: 27 210 154 / 0.56; /* #1bd29a */
@@ -103,13 +103,13 @@
   --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
   --chichi-10: 255 78 100 / 0.12; /* #ff4e64 */
 
-  --roshi: 12, 214, 100; /* #0CD664 */
-  --roshi-60: 12, 214, 100 / 0.56; /* #0CD664 */
-  --roshi-10: 12, 214, 100 / 0.12; /* #0CD664 */
+  --roshi: 12 214 100; /* #0CD664 */
+  --roshi-60: 12 214 100 / 0.56; /* #0CD664 */
+  --roshi-10: 12 214 100 / 0.12; /* #0CD664 */
 
-  --dodoria: 255, 138, 1; /* #FF8A01 */
-  --dodoria-60: 255, 138, 1 / 0.56; /* #FF8A01 */
-  --dodoria-10: 255, 138, 1 / 0.12; /* #FF8A01 */
+  --dodoria: 255 138 1; /* #FF8A01 */
+  --dodoria-60: 255 138 1 / 0.56; /* #FF8A01 */
+  --dodoria-10: 255 138 1 / 0.12; /* #FF8A01 */
 
   --cell: 27 210 154; /* #1bd29a */
   --cell-60: 27 210 154 / 0.56; /* #1bd29a */
